[package]
name = "dencho-cli"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"     # バイナリサイズ最適化
lto = true          # Link Time Optimization
codegen-units = 1   # 最適化優先
strip = true        # デバッグシンボル削除
