[package]
name = "dencho-cli"
version = "1.0.2"
edition = "2021"
description = "Supabase invoice downloader with HTTP server"
license = "MIT"
authors = ["yhonda-ohishi-pub-dev"]

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"     # バイナリサイズ最適化
lto = true          # Link Time Optimization
codegen-units = 1   # 最適化優先
strip = true        # デバッグシンボル削除
